Random crash when rendering with BI #39852

Closed
opened 2014-04-23 03:34:28 +02:00 by Willi · 10 comments

System Information
Win7/64, AMD HD 6850

Blender Version
Broken:

  • til 2.58: no crash but also no render result (maybe version too old)
  • crash since 2.63 (r45996), including 2.70-1b523b5-win64

Short description of error
After narrowing the problem down (more and more and more...) from a big project to the simple scene attached, there's a random crash when starting rendering.

Exact steps for others to reproduce the error

  • Open the attached file: Layer one contains a group instance, layer 2 contains the group definition.
  • Go to layer 1 and render. Usually it crashes the first time. If not, render again until it crashes.

This is a very unspecific problem because it can be "solved" by any of the following actions:

  • Switch to Cycles
  • Clear Scale of the group instance (in layer 1), i.e. from 0.1 to 1.0
  • With the array modifier attached to the object in layer 2, reduce the count from 72 to 20 or less.
  • On layer 2, add the empty to the same group as the other object.

RandomCrash.blend

**System Information** Win7/64, AMD HD 6850 **Blender Version** Broken: - til 2.58: no crash but also no render result (maybe version too old) - crash since 2.63 (r45996), including 2.70-1b523b5-win64 **Short description of error** After narrowing the problem down (more and more and more...) from a big project to the simple scene attached, there's a random crash when starting rendering. **Exact steps for others to reproduce the error** - Open the attached file: Layer one contains a group instance, layer 2 contains the group definition. - Go to layer 1 and render. Usually it crashes the first time. If not, render again until it crashes. This is a very unspecific problem because it can be "solved" by *any of* the following actions: - Switch to Cycles - Clear Scale of the group instance (in layer 1), i.e. from 0.1 to 1.0 - With the array modifier attached to the object in layer 2, reduce the count from 72 to 20 or less. - On layer 2, add the empty to the same group as the other object. [RandomCrash.blend](https://archive.blender.org/developer/F85693/RandomCrash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

This issue was referenced by blender/blender-addons-contrib@1e6fa59e4f

This issue was referenced by blender/blender-addons-contrib@1e6fa59e4f4447bfeecd5abb868361ae1b7ab9ab

This issue was referenced by 1e6fa59e4f

This issue was referenced by 1e6fa59e4f4447bfeecd5abb868361ae1b7ab9ab

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1e6fa59e4f.

Closed by commit 1e6fa59e4f.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Fixed, however the empty object should be in the group for correct results.

Note, the error is that the accumulated result of an array with a large offset causes an objects who's bounds exceeds the maximum float value (when added into the ray-tree).

Fixed, however the empty object should be in the group for correct results. Note, the error is that the accumulated result of an array with a large offset causes an objects who's bounds exceeds the maximum float value (when added into the ray-tree).
Author

Thanks, but it crashes if the object is small (scale 0.1), not if it's large (scale 1.0). In addition, it didn't crash every time, and I don't see a large offset, and it works in cycles which doesn't change the geometry. So, I don't understand your explanation at all, but it's fine if it's fixed now. :)

Thanks, but it crashes if the object is small (scale 0.1), not if it's large (scale 1.0). In addition, it didn't crash every time, and I don't see a large offset, and it works in cycles which doesn't change the geometry. So, I don't understand your explanation at all, but it's fine if it's fixed now. :)

@willi.

  • the array modifier gives different results at a different scale (evidentially not causing the ray-tree to reach INF)
  • just because it works sometimes, doesn't mean the bug is gone (it can accidentally work when the bug is present too :) )
  • cycles has its own ray-tree.
@willi. - the array modifier gives different results at a different scale (evidentially not causing the ray-tree to reach `INF`) - just because it works sometimes, doesn't mean the bug is gone (it can accidentally work when the bug is present too :) ) - cycles has its own ray-tree.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39852
No description provided.