Fix T39852: Crash (Blender internal) large objects

Add check when bounds reached inf